Ajout ébauche activité page d'accueil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">OutGuess</string>
+
+    <string name="button_play">Jouer</string>
+    <string name="button_media">Parcourir les oeuvres</string>
+
     <string name="title_activity_question">QuestionActivity</string>
+    <string name="title_activity_home">Accueil</string>
+
 </resources>
