--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <!-- strings nom application / activités -->
     <string name="app_name">OutGuess</string>
-    <string name="title_activity_question">QuestionActivity</string>
+    <string name="title_activity_question">Question</string>
     <string name="title_activity_home">Accueil</string>
 
     <!-- strings activité accueil -->
     <string name="button_play">Jouer</string>
     <string name="button_media">Voter</string>
+    <string name="button_availablesoon">Prochainement</string>
 
 
 
