ajout écran ScoreActivity.java et début progress bar pour scores

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="button_media">Voter</string>
     <string name="button_availablesoon">Prochainement</string>
 
+    <!-- strings activité récap score -->
+    <string name="null_score">0</string>
+    <string name="null_question">Oeuvre</string>
+
 
 
 </resources>
